--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.4.6",
     "cors": "^2.8.5",
     "debug": "~4.3.4",
+    "dotenv": "^16.4.5",
     "ejs": "~3.1.9",
     "express": "~4.19.2",
     "http-errors": "~2.0.0",
