--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.6",
     "cors": "^2.8.5",
     "debug": "~4.3.4",
@@ -15,6 +16,7 @@
     "express": "~4.19.2",
     "http-errors": "~2.0.0",
     "image-size": "^1.1.1",
+    "jsonwebtoken": "^9.0.2",
     "minio": "^7.1.3",
     "morgan": "~1.10.0",
     "multer": "^1.4.5-lts.1",
