--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.2",
-    "sharp": "^0.33.4"
+    "sharp": "^0.33.4",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
