--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "aws-sdk": "^2.1656.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.6",
     "cors": "^2.8.5",
