--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "ejs": "~3.1.9",
     "express": "~4.19.2",
+    "helmet": "^7.1.0",
     "http-errors": "~2.0.0",
     "image-size": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
