--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.658.1",
     "@aws-sdk/s3-request-presigner": "^3.670.0",
+    "express-validator": "^7.1.0",
     "winston": "^3.13.1",
     "node-cache": "^5.1.2",
-    "aws-sdk": "^2.1656.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.6",
     "cors": "^2.8.5",
@@ -23,7 +23,6 @@
     "http-errors": "~2.0.0",
     "image-size": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
-    "minio": "^7.1.3",
     "morgan": "~1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
