--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.658.1",
     "@aws-sdk/s3-request-presigner": "^3.670.0",
-    "express-validator": "^7.1.0",
-    "winston": "^3.13.1",
-    "node-cache": "^5.1.2",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.6",
     "cors": "^2.8.5",
@@ -19,16 +16,20 @@
     "dotenv": "^16.4.5",
     "ejs": "~3.1.9",
     "express": "^4.21.2",
+    "express-validator": "^7.1.0",
+    "express-rate-limit": "^7.3.1",
     "helmet": "^7.1.0",
     "http-errors": "~2.0.0",
     "image-size": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "~1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-cache": "^5.1.2",
     "nodemailer": "^6.9.13",
     "sequelize": "^6.37.2",
     "sharp": "^0.33.4",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "winston": "^3.13.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
